--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -25,7 +25,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: assassinh/EX-chatGPT
+          images: assassinh/RSS
           tags: |
             type=raw,value=latest
             type=ref,event=tag
